--- a/web-2.html
+++ b/web-2.html
@@ -148,7 +148,7 @@ tr:nth-child(even) {
 
 
     </div
-    <!-- <script>
+     <script synchronus>
         alert("WELCOME TO OUR WEBSITE")
         if(confirm("thankis for your confirmation")){
         alert("you clicked ok to got ur mail id continued...")
@@ -156,7 +156,7 @@ tr:nth-child(even) {
         alert("you clicked cancel ")
     }
     
-    </script> -->
+    </script>
 
 
     
